--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.15.2",
     "@mui/styled-engine-sc": "^6.0.0-alpha.10",
+    "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1",
     "styled-components": "^6.1.6"
   },
   "devDependencies": {
